# Connexa

./: LICENSE  README.md  duplicates_report.txt  duplicates_report_after_cleanup.txt  suggested_removals.txt
.sentry-native/c646db26-f316-4043-5ab9-7794faf56f1e.run/: __sentry-breadcrumb1  __sentry-breadcrumb2  session.json
docs/: architecture.md  dart_code_overview.md  protocol.md  roadmap.md  rust_code_overview.md  vision.md
migrations/: 20230918_create_devices.sql
mobile/: .flutter-plugins-dependencies  pubspec.yaml
mobile/.dart_tool/: package_config.json  package_graph.json
mobile/lib/: home_screen.dart  main.dart
mobile/lib/db/: database.dart  mock_database.dart  real_database_helper.dart
mobile/lib/provider/: change_notifier.dart  contact_provider.dart  message_provider.dart
mobile/lib/screens/: chat_screen.dart  contact_screen.dart  login_screen.dart
proto/: message.proto
server/: .env  Cargo.toml  api.rs  auth.rs  build.rs  device_api.rs  federation.rs  federation_api.rs  group.rs  group_api.rs  group_message_api.rs  group_mls.rs  main.rs  media.rs  messaging.rs  p2p.rs  psi.rs  relay.rs  sfu_api.rs  signaling.rs  webrtc.rs
server/.cargo/: config.toml
server/crypto/: double_ratchet.rs  mod.rs  session.rs  x3dh.rs
server/db/: connexa.db
server/src/: api.rs  auth.rs  config.rs  decentralized_storage.rs  device.rs  federation.rs  federation_api.rs  group.rs  group_api.rs  main.rs  messaging.rs  p2p.rs  relay.rs  sfu_api.rs  webrtc.rs
server/src/crypto/: double_ratchet.rs  mod.rs  session.rs  x3dh.rs
tests/: device_linking.rs
(+3 files in other folders)
