[package]
name = "connexa-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["headers", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
qrcode = "0.12"
image = "0.24"
base64 = "0.21"
openmls = "0.7.0"
openmls_rust_crypto = "0.4.0"
x25519-dalek = "2.0.0-rc.1"
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
thiserror = "1.0"
rand_core = { version = "0.6", features = ["std"] }
prost = "0.11"
tonic = "0.8"
tower = "0.4"
hyper = { version = "0.14", features = ["full"] }
anyhow = "1.0"
webrtc = "0.13.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["json"] }
lep = "0.5.0"
libp2p = { version = "0.53.2", features = ["full"] }
ipfs-api = "0.17.0"
futures = "0.3"
rand = "0.8"

[build-dependencies]
prost-build = "0.11"
tonic-build = "0.8"

[[bin]]
name = "connexa-server"
path = "main.rs"
